# JARVIS-lite

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: release.yml
docs/: BUILD.md  DEVELOPER_GUIDE.md  INSTALLATION.md  MODELS.md  USER_GUIDE.md
include/jarvis/agent/: FileAgent.hpp
include/jarvis/cli/: CommandLoop.hpp
include/jarvis/config/: Config.hpp
include/jarvis/core/: Application.hpp  Version.hpp
include/jarvis/inference/: InferenceEngine.hpp
include/jarvis/logging/: Logger.hpp
include/jarvis/model/: ModelCatalog.hpp  ModelManager.hpp
include/jarvis/network/: Downloader.hpp
include/jarvis/platform/: SystemInfo.hpp
include/jarvis/ui/: ConsoleUi.hpp
include/jarvis/util/: Sha256.hpp  String.hpp
include/jarvis/voice/: VoiceEngine.hpp
scripts/: install-unix.sh
src/: main.cpp
src/agent/: FileAgent.cpp
src/cli/: CommandLoop.cpp
src/config/: Config.cpp
src/core/: Application.cpp
src/inference/: InferenceEngine.cpp
src/logging/: Logger.cpp
src/model/: ModelCatalog.cpp  ModelManager.cpp
src/network/: Downloader.cpp
src/platform/: SystemInfo.cpp
src/ui/: ConsoleUi.cpp
src/util/: Sha256.cpp  String.cpp
src/voice/: VoiceEngine.cpp
tests/: test_main.cpp
